# open5gs

./: meson.build  meson_options.txt
configs/open5gs/: pcrf.yaml.in
debian/: changelog  control
lib/dbi/: ims.c  meson.build  ogs-mongoc.c  ogs-mongoc.h  session.c  subscription.c
lib/sctp/: meson.build
src/mme/: esm-handler.c
